<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragments.StartMenuFragment">

    <item
        android:id="@+id/menu_start_activity_share"
        android:orderInCategory="1"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_start_activity_settings"
        android:orderInCategory="2"
        android:title="@string/settings"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_start_activity_exit"
        android:title="@string/exit"
        app:showAsAction="never"
        android:orderInCategory="3">
    </item>
</menu>