<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent"
    android:orientation="vertical"
    android:background="@color/color_background"
    tools:context=".fragments.StartMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/fragment_start_menu_image_view_main"
            style="@style/StartActivityImageMainStyle"
            android:src="@drawable/img_start_activity_book" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@color/color_background">

        <LinearLayout
            style="@style/StartActivityHorizontalLinearLayoutStyle">

            <ImageView
                android:id="@+id/fragment_start_menu_image_view_info"
                style="@style/StartActivityImageButtonStyle"
                android:src="@drawable/ic_start_activity_information" />

            <Button
                android:id="@+id/fragment_start_menu_button_info"
                style="@style/StartActivityButtonStyle"
                android:text="@string/about_app" />
        </LinearLayout>

        <View
            style="@style/StartActivityDividerStyle"/>

        <LinearLayout
            style="@style/StartActivityHorizontalLinearLayoutStyle">

            <ImageView
                android:id="@+id/fragment_start_menu_image_view_theory"
                style="@style/StartActivityImageButtonStyle"
                android:src="@drawable/ic_start_activity_theory" />

            <Button
                android:id="@+id/fragment_start_menu_button_theory"
                style="@style/StartActivityButtonStyle"
                android:fontFamily="@assets/fonts/rubikLight"
                android:text="@string/theory" />
        </LinearLayout>

        <View
            style="@style/StartActivityDividerStyle"/>

        <LinearLayout
            style="@style/StartActivityHorizontalLinearLayoutStyle">

            <ImageView
                android:id="@+id/fragment_start_menu_image_view_cheat"
                style="@style/StartActivityImageButtonStyle"
                android:src="@drawable/ic_start_activity_cheat" />

            <Button
                android:id="@+id/fragment_start_menu_button_cheat"
                style="@style/StartActivityButtonStyle"
                android:text="@string/cheat" />
        </LinearLayout>

        <View
            style="@style/StartActivityDividerStyle"/>

        <LinearLayout
            style="@style/StartActivityHorizontalLinearLayoutStyle">

            <ImageView
                android:id="@+id/fragment_start_menu_image_view_notes"
                style="@style/StartActivityImageButtonStyle"
                android:src="@drawable/ic_start_activity_notes" />

            <Button
                android:id="@+id/fragment_start_menu_button_notes"
                style="@style/StartActivityButtonStyle"
                android:text="@string/notes" />
        </LinearLayout>

        <View
            style="@style/StartActivityDividerStyle"/>

        <LinearLayout
            style="@style/StartActivityHorizontalLinearLayoutStyle">

            <ImageView
                android:id="@+id/fragment_start_menu_image_view_statistics"
                style="@style/StartActivityImageButtonStyle"
                android:src="@drawable/ic_start_activity_statistics" />

            <Button
                android:id="@+id/fragment_start_menu_button_statistics"
                style="@style/StartActivityButtonStyle"
                android:text="@string/statistics" />
        </LinearLayout>

        <View
            style="@style/StartActivityDividerStyle"/>

        <LinearLayout
            style="@style/StartActivityHorizontalLinearLayoutStyle">

            <ImageView
                android:id="@+id/fragment_start_menu_image_view_exit"
                style="@style/StartActivityImageButtonStyle"
                android:src="@drawable/ic_start_activity_exit" />

            <Button
                android:id="@+id/fragment_start_menu_button_exit"
                style="@style/StartActivityButtonStyle"
                android:text="@string/exit" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>